[tool.poetry]
name = "test-automatizado-robot-framework"
version = "0.1.0"
description = "Quick project to learn ROBOT FRAMEWORK with Sellenium."
authors = ["Gustavo Moda <gustavo.moda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^4.1.3"
robotframework-seleniumlibrary = "^6.0.0"
webdrivermanager = "^0.10.0"
poetry = "^1.1.13"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | __pycached__
 /
'''

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true